exact package requirements

--- a/fine_tuning/flux-ft/requirements.txt
+++ b/fine_tuning/flux-ft/requirements.txt
@@ -1,7 +1,7 @@
 accelerate==0.33.0
 transformers==4.44.0
 diffusers[torch]==0.25.0
-torchvision
+torchvision==0.22.0
 ftfy==6.1.1
 opencv-python==4.8.1.78
 einops==0.7.0
