--- a/adversarial_mislabeling_attack/cogvlm/requirements.txt
+++ b/adversarial_mislabeling_attack/cogvlm/requirements.txt
@@ -1,12 +1,11 @@
-torch
-torchvision
+torch==2.7.0
+torchvision==0.22.0
+protobuf==6.31.1
+accelerate==1.7.0
+sentencepiece==0.2.0
+einops==0.8.1
+xformers==0.0.30
+triton==3.3.0
+transformers==4.41.1
 ipykernel
 ipywidgets
-protobuf
-accelerate
-sentencepiece
-einops
-xformers
-triton
-transformers==4.41.1
-accelerate
