--- a/adversarial_mislabeling_attack/llava/requirements.txt
+++ b/adversarial_mislabeling_attack/llava/requirements.txt
@@ -1,6 +1,6 @@
-torch
-torchvision
+torch==2.7.0
+torchvision==0.22.0
+transformers==4.52.3
+accelerate==1.7.0
 ipykernel
 ipywidgets
-transformers>=4.35.3
-accelerate
