--- a/adversarial_mislabeling_attack/xgen_mm/requirements.txt
+++ b/adversarial_mislabeling_attack/xgen_mm/requirements.txt
@@ -1,9 +1,9 @@
-torch
-torchvision
-ipykernel
-ipywidgets
-einops
-einops-exts
+torch==2.7.0
+torchvision==0.22.0
+einops==0.8.1
+einops-exts==0.0.4
 open_clip_torch==2.24.0
 transformers==4.41.1
-accelerate
+accelerate==1.7.0
+ipykernel
+ipywidgets
