--- a/fine_tuning/sd21-ft/requirements.txt
+++ b/fine_tuning/sd21-ft/requirements.txt
@@ -1,10 +1,10 @@
-accelerate>=0.16.0
-torch
-torchvision
-transformers>=4.25.1
-datasets>=2.19.1
-ftfy
-tensorboard
-Jinja2
+accelerate==1.7.0
+torch==2.7.0
+torchvision==0.22.0
+transformers==4.52.3
+datasets==3.6.0
+ftfy==6.3.1
+Jinja2==3.1.6
 peft==0.7.0
-diffusers
+diffusers==0.33.1
+tensorboard
